--- a/src/components/CodeEditor/index.css
+++ b/src/components/CodeEditor/index.css
@@ -1,11 +1,3 @@
-.previous-step {
-    /* filter: grayscale(100%); */
-    opacity: 0.7;
-    background-color: rgb(102, 34, 23) !important;
-}
-
-.test {
-    /* filter: grayscale(100%); */
-    opacity: 0.7;
-    background-color: rgb(23, 102, 56);
+.transparent {
+    color: transparent !important;
 }
