--- a/src/components/CodeEditor/index.css
+++ b/src/components/CodeEditor/index.css
@@ -1,3 +1,8 @@
 .transparent {
     color: transparent !important;
 }
+
+.monaco-editor {
+    height: 100% !important;
+    width: 100% !important;
+}
